# Hacker-Viewer

./: Cargo.toml  README.md  main.go  package.json  project-structure.txt  tailwind.config.js  vite.config.js
src/: index.html
src-tauri/: tauri.conf.json
src-tauri/src/: commans.rs  config.rs  main.rs
src/css/: styles.css
src/js/: app.js  app.jsx
src/js/components/: LoginForm.jsx  SettingsDialog.jsx  TabBar.jsx
src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  pl.json  pt.json  ru.json
static/: index.html
