[package]
name = "hacker-viewer"
version = "1.0.0"
description = "Hacker Viewer - Streaming Platform Browser"
authors = ["Your Name"]
edition = "2021"

[[bin]]
name = "hacker-viewer"
path = "src/main.rs"

[dependencies]
tauri = { version = "1.7", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17"
base64 = "0.22"
keyring = "2.0"
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
