[package]
name = "hacker-viewer"
version = "1.0.0"
description = "Hacker Viewer - Streaming Platform Browser with 4K HDR Support"
authors = ["VoidArc Studio"]
edition = "2021"

[[bin]]
name = "hacker-viewer"
path = "src-tauri/src/main.rs"

[dependencies]
tauri = { version = "1.7", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17"
base64 = "0.22"
keyring = "2.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
zbus = "3.14" # For Wayland integration

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
